# backend/swagger.yaml
@@ -620,6 +620,23 @@ components:
           type: integer
           description: Number of possitives at current date
 
+    # Data of petition's user
+    userInfo:
+      type: object
+      required:
+        - "userId"
+        - "userName"
+      properties:
+        _id:
+          type: integer
+          description: Object identifier
+        userId:
+          type: string
+          description: Petition's owner Id
+        userName:
+          type: string
+          description: Petition's owner name
+
     # Petition Schema
     petitions:
       type: object
@@ -629,6 +646,7 @@ components:
         - "place"
         - "isUrgent"
         - "status"
+        - "userInfo"
 
       properties:
         _id:
@@ -641,9 +659,9 @@ components:
           type: string
           description: A description of the petition
           maxLength: 150
-        userId:
-          type: string
-          description: Petition's owner Id
+        userInfo:
+          $ref: "#/components/schemas/userInfo"
+          description: Petition's owner information
         place:
           type: string
           description: Place where the petition is located
